Agregue una imagen

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 
         <section class="grilla">
             <article class="landing b1">
-                <img src="C:\Users\Porte\Desktop\Bambú Zen\Assets\Fondos\Landing Page\Arte Landing Page 1 - Este.png"
-                    alt="">
+                <img src="Assets/Fondos/Landing Page/Arte Landing Page 1 - Este.png" alt="Fondo de tonos claros con un dragon de colores">
                 <div class="text b1-text">
                     <h2>Una experiencia gastronómica inolvidable</h2>
                     <p>Nuestro menú es una oda a la diversidad y riqueza de la cocina asiatica combinando comida de
