Arregle todos los vinculos de las imagenes

--- a/Pages/faq.html
+++ b/Pages/faq.html
@@ -10,7 +10,7 @@
    
     <header>
         <div class="logo">
-            <img src="C:\Users\Porte\Desktop\Bambú Zen\Assets\LogoBambúZen.png" alt="Logo de la empresa">
+            <img src="../Assets/LogoBambúZen.png" alt="Logo de la empresa">
             <span>Bambú Zen</span>
         </div>
         <nav class="nav-list">
