--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -10,7 +10,7 @@
     
     <header>
         <div class="logo">
-            <img src="C:\Users\Porte\Desktop\Bambú Zen\Assets\LogoBambúZen.png" alt="Logo de la empresa">
+            <img src="../Assets/LogoBambúZen.png" alt="Logo de la empresa">
             <span>Bambú Zen</span>
         </div>
         <nav class="nav-list">
@@ -26,7 +26,7 @@
 
     <main>
         <section class="contacto-img-1">
-            <img src="C:\Users\Porte\Desktop\Bambú Zen\Assets\Fondos\Landing Page\Fondo 1 - Landing Page.png" alt="Fondo de estilo oriental">
+            <img src="../Assets/Fondos/Landing Page/Fondo 1 - Landing Page.png" alt="Fondo de estilo oriental">
          </section>
          <section class="contacto-text-1">
             <h2>Conoce nuestros locales</h2>
