--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="logo">
-            <img src="C:\Users\Porte\Desktop\Bambú Zen\Assets\LogoBambúZen.png" alt="Logo de la empresa">
+            <img src="Assets/LogoBambúZen.png" alt="Logo de la empresa">
             <span>Bambú Zen</span>
         </div>
         <nav class="nav-list">
@@ -49,7 +49,7 @@
                         equipo, siempre atento y amable, está aquí para asegurarse de que tu experiencia sea
                         inolvidable.</p>
                 </div>
-                <img src="C:\Users\Porte\Desktop\Bambú Zen\Assets\Fondos\Landing Page\Restaurante 1 - Este.png" alt="">
+                <img src="Assets/Fondos/Landing Page/Restaurante 1 - Este.png" alt="Restaurante de estilo oriental con muchas mesas, sillones y sillas">
             </article>
         </section>
 
