Termine de modificar la pestaña Nosotros agregandole 3 cards e imagenes, termine el grid de menú

--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -27,19 +27,33 @@
 
     <main>
             <div class = nosotros-section>
-                <h2>Un oasis ásiatico</h2>
-                <h3>en el corazón de Argentina</h3>
-                <p>Fundado cerca de los años 2000, Bambú Zen surge como un concepto innovador en el panorama gastronómico de Buenos Aires. Nuestro restaurante es el resultado de una colaboración única entre dos chefs con una gran pasión por la comida de origen asiatico. Bambú Zen nace de la visión de fusionar la riqueza de la cocinas asiáticas</p>
+                <div class = "nosotros-card">
+                    <img src="../Assets/Fondos/Comida 3.png" alt="">
+                        <div class="nosotros-text">
+                            <h2>Un oasis ásiatico</h2>
+                            <p>Fundado cerca de los años 2000, Bambú Zen surge como un concepto innovador en el panorama gastronómico de Buenos Aires. Nuestro restaurante es el resultado de una colaboración única entre dos chefs con una gran pasión por la comida de origen asiatico. Bambú Zen nace de la visión de fusionar la riqueza de la cocinas asiáticas</p>
+                        </div>
+                    </div>
             </div>
 
             <div class = nosotros-section>
-                <h2>Visión</h2>
-                <p>Buscamos ser la primera elección de los comensales argentinos para disfrutar de la gastronomía y cultura asiática, en un ambiente acogedor y culturalmente enriquecedor donde todos se sientan bienvenidos.</p>
+                <div class = "nosotros-card">
+                    <img src="../Assets/Fondos/Comida 2.png" alt="">
+                        <div class="nosotros-text">
+                            <h2>Visión</h2>
+                            <p>Buscamos ser la primera elección de los comensales argentinos para disfrutar de la gastronomía y cultura asiática, en un ambiente acogedor y culturalmente enriquecedor donde todos se sientan bienvenidos.</p>
+                        </div>
+                    </div>
             </div>
 
             <div class = nosotros-section>
-                <h2>Misión</h2>
-                <p>Nuestra misión es garantizar una experiencia gastronómica única con una amplia gama de platos asiáticos, desde tradicionales hasta fusiones creativas, promoviendo el entendimiento y aprecio de las culturas asiáticas.</p>
+                <div class = "nosotros-card">
+                    <img src="../Assets/Fondos/Comida 5.png" alt="">
+                    <div class="nosotros-text">
+                        <h2>Misión</h2>
+                        <p>Nuestra misión es garantizar una experiencia gastronómica única con una amplia gama de platos asiáticos, desde tradicionales hasta fusiones creativas, promoviendo el entendimiento y aprecio de las culturas asiáticas.</p>
+                    </div>
+                </div>
             </div>  
         
         </main>
