--- a/Pages/menú.html
+++ b/Pages/menú.html
@@ -28,8 +28,8 @@
 
     <main>
 
-        <div class="menu-1">
-            <div class="menu-texto-1">
+        <div class="menu-section">
+            <div class="menu-text">
                 <h2>Espíritu chino</h2>
                 <h3>Pato Pekin</h3>
                 <p>Pato entero, salsa de soja, miel, vinagre de arroz, jengibre, cebolla verde, tortillas chinas, pepino
@@ -44,17 +44,17 @@
                 <p>Lomo de cerdo en cubos, pimiento verde y rojo, cebolla, ananá, vinagre, azúcar, salsa de tomate,
                     salsa de soja, harina de maíz</p>
             </div>
-            <div class="menu-img-1">
+            <div class="menu-img">
                 <img src="../Assets/Fondos/Menú/Comida China 1.png" alt="Platos chinos">
             </div>
         </div>
 
-        <div class="menu-2">
-            <div class="menu-img-2">
+        <div class="menu-section">
+            <div class="menu-img">
                 <img src="../Assets/Fondos/Menú/Comida Tailandesa 1.png"
                     alt="Platos tailandeses">
             </div>
-            <div class="menu-texto-2">
+            <div class="menu-text">
                 <h2>Aire tailandés</h2>
                 <h3>Pad Thai</h3>
                 <p>Fideos de arroz, tofu o camarones, brotes de soja, huevos, cebolla verde, ajo, salsa de lima</p>
@@ -69,8 +69,8 @@
             </div>
         </div>
 
-        <div class="menu-3">
-            <div class="menu-texto-3">
+        <div class="menu-section">
+            <div class="menu-text">
                 <h2>Ola coreana</h2>
                 <h3>Bibimbap</h3>
                 <p>Arroz cocido, carne marinada, espinacas, zanahorias, brotes de soja, vegetales salteadas, huevo
@@ -85,18 +85,18 @@
                 <p>Camarones, champiñones, pasta de chile, galanga, hojas de lima, hierba limón, jugo de lima, salsa de
                     pescado, cilantro</p>
             </div>
-            <div class="menu-img-3">
+            <div class="menu-img">
                 <img src="../Assets/Fondos/Menú/Comida Coreana 1.png"
                     alt="Platos coreanos">
             </div>
         </div>
 
-        <div class="menu-4">
-            <div class="menu-img-4">
+        <div class="menu-section">
+            <div class="menu-img">
                 <img src="../Assets/Fondos/Menú/Comida Japonesa 1.png"
                     alt="Platos japoneses">
             </div>
-            <div class="menu-texto-4">
+            <div class="menu-text">
                 <h2>Honor japonés</h2>
                 <h3>Ramen</h3>
                 <p>Fideos de ramen, caldo (pollo, cerdo, pescado o vegetales), huevo cocido, cebolla verde, algas nori,
