--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         equipo, siempre atento y amable, está aquí para asegurarse de que tu experiencia sea
                         inolvidable.</p>
                 </div>
-                <img src="Assets/Fondos/Landing Page/Restaurante 1 - Este.png" alt="Restaurante de estilo oriental con muchas mesas, sillones y sillas">
+                <img src="Assets/Fondos/Landing Page/Restaurante 1 - Este.png" alt="">
             </article>
         </section>
 
